--- a/html/index.html
+++ b/html/index.html
@@ -8,6 +8,7 @@
 	<meta name="viewport" content="width=device-width", initial-scale="1.0">
 	<title>Jinxiu Yao Portfolio</title>
 	<link rel="stylesheet" href="../css/style.css">
+	<script src="https://kit.fontawesome.com/8261e65aab.js" crossorigin="anonymous"></script>
 </head>
 
 <!--------------------------BODY-------------------------->
@@ -41,7 +42,7 @@
 					<img src="../asset/img/user.png">
 				</div>
 				<div class="about-col-2">
-					<h1 class="about-title">About Me</h1>
+					<h1 class="section-title">About Me</h1>
 					<!--ABOUT ME SUMMARY-->
 					<p>
 						<br>
@@ -127,6 +128,10 @@
 					</div>
 				</div>
 			</div>
+			<a href="../asset/Jinxiu Yao_CV_edit2.pdf" class="my-btn my-btn-skin"
+				target="_blank" rel="noopener noreferrer" download>
+				My CV
+			</a>
 		</div>
 		<script>
 			var about_subtitles_links = document.getElementsByClassName("about-subtitles-link");
@@ -147,6 +152,76 @@
 		</script>
 	</div>
 	<!--------------------------PORTFOLIO-------------------------->
+	<div id="portfolio">
+		<div class="container">
+			<h1 class="section-title">Portfolio</h1>
+			<div class="portfolio-list">
+				<div class="portfolio-project">
+					<img src="../asset/img/work-1.png">
+					<div class="portfolio-project-layer">
+						<h3>Project 1</h3>
+						<p>Project Description</p>
+						<a href="#"><i class="fa-solid fa-link"></i></a>
+					</div>
+				</div>
+				<div class="portfolio-project">
+					<img src="../asset/img/work-2.png">
+					<div class="portfolio-project-layer">
+						<h3>Project 2</h3>
+						<p>Project Description</p>
+						<a href="#"><i class="fa-solid fa-link"></i></a>
+					</div>
+				</div>
+				<div class="portfolio-project">
+					<img src="../asset/img/work-3.png">
+					<div class="portfolio-project-layer">
+						<h3>Project 3</h3>
+						<p>Project Description</p>
+						<a href="#"><i class="fa-solid fa-link"></i></a>
+					</div>
+				</div>
+			</div>
+			<a href="#" class="my-btn">See More</a>
+		</div>
+	</div>
+	<!--------------------------CONTACT-------------------------->
+	<div id="contact">
+		<div class="container">
+			<div class="contact-row-1">
+				<div class="contact-col-1">
+					<h1 class="section-title">Contact Me</h1>
+					<p><i class="fa-solid fa-envelope"></i> jyao.ido@gmail.com</p>
+					<p><i class="fa-solid fa-phone"></i> +971 58 534 9299</p>
+					<div class="social-icons">
+						<a href="https://linkedin.com/in/jinxiuyao/" 
+							target="_blank" rel="noopener noreferrer">
+							<i class="fa-brands fa-linkedin"></i>
+						</a>
+						<a href="https://github.com/jya0" 
+							target="_blank" rel="noopener noreferrer">
+							<i class="fa-brands fa-square-github"></i>
+						</a>
+					</div>
+				</div>
+				<div class="contact-col-2">
+					<form>
+						<input type="text" name="name" placeholder="Your Name" required>
+						<input type="email" name="email" placeholder="Your Email" required>
+						<textarea name="Message" rows="6" placeholder="Your Message"></textarea>
+						<button type="submit" class="my-btn my-btn-skin">Submit</button>
+					</form>
+				</div>
+			</div>
+		</div>
+		<div class="copyright">
+			<p>
+				Copyright © Kevin. 
+				I followed the design made with 
+				<i class="fa-solid fa-heart"></i> 
+				by Easy Tutorials
+			</p> 
+		</div>
+	</div>
 </body>
 
 </html>
